--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 20px;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -38,12 +42,14 @@ a {
     text-decoration: none;
     font-weight: 700;
     font-size: 1rem;
+    margin-right: 5px;
 }
 
 .logo {
     color: white;
     font-size: 2rem;
     margin: 0 auto 0 auto;
+    align-self: center;
 }
 
 .logo-text {
