--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
     font-size: 20px;
+    height: 100vh;
 }
 
 body {
@@ -11,8 +12,8 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 16fr;
-    height: 100vh;
-    background-image: url(./imgs/bw-background.jpg);
+    background-image: url(./imgs/bw-background.jpg) ;
+    background-attachment: fixed;
     background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position: center;
@@ -23,8 +24,10 @@ body {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 2fr 6fr;
-    background-color: rgba(0, 0, 0, .5);
-    
+    background-color: rgba(0, 0, 0, .85);
+    position: sticky;
+    top: 0;
+    margin-bottom: 2rem;
 }
 
 .header-links {
@@ -59,3 +62,21 @@ a {
 li {
     margin: auto;
 }
+
+.content-section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    gap: 5px;
+    padding: 1rem;
+}
+
+.content {
+    background-color: rgba(255, 255, 255, .2);
+    width: 60%;
+    height: 45vh;
+    margin: 0 auto 1rem auto;
+    border-radius: 50px;
+    padding: 2rem;
+}
+
