--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
     font-size: 20px;
-    height: 100vh;
+    overflow-x: hidden;
 }
 
 body {
@@ -23,7 +23,8 @@ body {
 .header {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 2fr 6fr;
+    /* grid-template-columns: 2fr 6fr; */
+    grid-template-columns: 1fr;
     background-color: rgba(0, 0, 0, .85);
     position: sticky;
     top: 0;
@@ -33,6 +34,7 @@ body {
 .header-links {
     display: grid;
     grid-template-columns: repeat(5,1fr);
+    padding: 0;
 }
 
 .header-link {
@@ -50,14 +52,13 @@ a {
     text-decoration: none;
     font-weight: 700;
     font-size: 1rem;
-    margin-right: 5px;
 }
 
 .logo {
-    color: white;
-    font-size: 2rem;
-    margin: 0 auto 0 auto;
-    align-self: center;
+    background-image: url(./imgs/logo.png);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 .logo-text {
