--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
     display: grid;
     grid-template-columns: repeat(5,1fr);
     padding: 0;
+    margin: 0;
 }
 
 .header-link {
@@ -56,8 +57,8 @@ a {
 
 .logo {
     background-image: url(./imgs/logo.png);
-    width: 100px;
-    height: 100px;
+    width: 15vh;
+    height: 15vh;
     border-radius: 50%;
 }
 
@@ -80,7 +81,6 @@ li {
 .content {
     background-color: rgba(255, 255, 255, .2);
     width: 60%;
-    height: 45vh;
     margin: 0 auto 1rem auto;
     border-radius: 50px;
     padding: 2rem;
