--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,12 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
+    height: 100%;
 }
 
 .header {
     display: grid;
     grid-template-rows: 1fr;
-    /* grid-template-columns: 2fr 6fr; */
     grid-template-columns: 1fr;
     background-color: rgba(0, 0, 0, .85);
     position: sticky;
@@ -34,12 +34,12 @@ body {
 .header-links {
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    padding: 0;
+    padding: 0 1rem 0 1rem;
     margin: 0;
 }
 
 .header-link {
-    font-size: 3vh;
+    font-size: 2.5vh;
 }
 
 ul {
@@ -79,11 +79,31 @@ li {
 }
 
 .content {
-    background-color: rgba(255, 255, 255, .2);
-    width: 60%;
+    background-color: rgba(255, 255, 255, .6);
+    width: 50%;
     margin: 0 auto 1rem auto;
     border-radius: 50px;
     padding: 2rem;
     font-size: 1rem;
 }
+
+.footer {
+    width: 100%;
+    background-color: rgba(0, 0, 0, .85);
+    text-align: center;
+    color: white;
+    height: 3rem;
+    display: flex;
+    margin-top: auto;
+}
+
+.footer-text {
+    margin: auto;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
 
