--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,6 @@ ul {
 }
 
 a {
-    font-size: 10px;
     color: white;
     text-decoration: none;
     font-weight: 700;
@@ -56,9 +55,10 @@ a {
 }
 
 .logo {
+    margin: auto;
     background-image: url(./imgs/logo.png);
-    width: 15vh;
-    height: 15vh;
+    width: 10vh;
+    height: 10vh;
     border-radius: 50%;
 }
 
@@ -107,4 +107,49 @@ li {
     flex-direction: column;
 }
 
+.contact-sections {
+    display: block;
+}
 
+.contact-button {
+    background-color: rgb(47, 48, 47);
+    color: white;
+    font-size: 1rem;
+    width: 80px;
+    height: 40px;
+    border-radius: 10%;
+    border: none;
+    margin: 0 auto 0 auto;
+}
+
+.contact-button-section {
+    margin-top: 10px;
+    display: flex;
+}
+
+.input-area {
+    border-radius: 30px;
+    width: 80%;
+}
+
+.contact-text {
+    display: grid;
+    grid-template-rows: 1fr 6fr;
+}
+
+.contact-text > textarea {
+    border-radius: 30px;
+    width: 85%;
+    border: 1px solid black;
+}
+
+.contact-name , .contact-email {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 1fr 7fr;
+    margin-bottom: 20px;
+}
+
+.text-section {
+    margin-bottom: 10px;
+}
